objects/copado1p__Platform_Job_Event__e.object
<CustomObject>
    <description>This Event is published by Copado 1 Platform whenever executing jobs</description>
    <fields>
        <fullName>copado1p__Copado_Job_Id__c</fullName>
        <description>This is the unique Job Id on the Copado 1 Platform</description>
        <label>Copado Job Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado1p__Description__c</fullName>
        <label>Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>copado1p__Platform_Job_Execution_Id__c</fullName>
        <description>This is the Id of the Platform Job Execution record, created whenever a C1P job has been scheduled.</description>
        <label>Platform Job Execution Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado1p__Status__c</fullName>
        <label>Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado1p__isFinished__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Finished</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado1p__isSuccess__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Success</label>
        <type>Checkbox</type>
    </fields>
    <label>Platform Job Event</label>
    <pluralLabel>Platform Job Events</pluralLabel>
</CustomObject>